workloads/http-echo/overlays/portcullis/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-echo
  namespace: http-echo
spec:
  rules:
    - host: echo.portcullis.osow.ski
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-echo
                port:
                  name: http
